@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.cflint</groupId>
 	<artifactId>CFLint</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.1</version>
 
 	<name>CFLint</name>
 	<description>
@@ -59,7 +59,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<cfparser.version>2.4.2</cfparser.version>
+		<cfparser.version>2.4.3</cfparser.version>
 	</properties>
   
 	<dependencies>
@@ -212,6 +212,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.5</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -330,7 +337,7 @@
 			    <configuration>
 			        <forkCount>1</forkCount>
 			        <reuseForks>true</reuseForks>
-			        <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
+			        <argLine>-Xmx2g</argLine>
 			    </configuration>
 			  </plugin>
 		</plugins>
